#Issue resolved with color contrast and alternative text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,8 @@ p{font-size: 18px;}
 .topheader {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
+  /*  background-color: #2a607c;*/
+  background-color: #235067;
     color: #ffffff;
 }
 
@@ -35,6 +36,7 @@ p{font-size: 18px;}
 }
 
 .topnav a{
+    outline-color: red;
     float: left;
     display: block;
     color: #ffffff;
@@ -81,23 +83,27 @@ p{font-size: 18px;}
     margin-bottom: 10px;
     padding: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+   /* background-color: #0072bb;*/
+   background-color: #00558a;
+
     color: #ffffff;
 }
 
 .resetimages{max-height: 160px;max-width: 100%;}
-.paragraph{position: relative; left: 5px;}
+.paragraph{position: relative; left: 5px; }
 .contentheadingsize{margin-bottom: 20px; font-size: 36px;}
 .asideheadingset{margin-bottom: 10px; text-align: center;}
 .resetasidelogo{max-height: 100px;max-width: 50%;}
+ h4{font-weight: normal;}
 
 
 .benefits {
     margin-top: 10px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   /* background-color: #2589bd;*/
-   background-color: #0070bb;
+   /* background-color: #2589bd;
+   background-color: #0070bb;*/
+   background-color:#00558A;
 }
 
 #benefit-lead, #benefit-brand, #benefit-cost{margin-bottom: 32px; color: #ffffff;}
